# zuul-mcp

./: .bazelrc  .gitignore  .release-please-config.json  BUILD.bazel  CHANGELOG.md  LICENSE  MODULE.bazel  README.md  go.mod
.github/: CODEOWNERS  release-please-config.json
.github/workflows/: bazel-ci.yaml  ci.yaml  release.yaml  test.yaml
cmd/zuul-mcp/: BUILD.bazel  main.go
internal/client/: BUILD.bazel  client.go  client_test.go
internal/config/: BUILD.bazel  config.go  config_test.go
internal/models/: BUILD.bazel  models.go  models_test.go
internal/server/: BUILD.bazel  server.go  tools.go
