"""Zuul MCP Server - MCP server for interacting with Zuul CI/CD."""

module(
    name = "zuul_mcp",
    version = "0.3.0",  # x-release-please-version
)

# Platform definitions for cross-compilation
bazel_dep(name = "platforms", version = "1.0.0")

# Go rules
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")

# Go toolchain
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.0")

# Go dependencies - declared directly without go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")

# Direct dependency: MCP Go SDK
go_deps.module(
    path = "github.com/mark3labs/mcp-go",
    sum = "h1:s0S8qR/9fWaQ3pHxz7pm1uQ0DrswoSnRIxKIjbiQtkc=",
    version = "v0.45.0",
)

# Transitive dependencies of mcp-go
go_deps.module(
    path = "github.com/bahlo/generic-list-go",
    sum = "h1:5sz/EEAK+ls5wF+NeqDpk5+iNdMDXrh3z3nPnH1Wvgk=",
    version = "v0.2.0",
)

go_deps.module(
    path = "github.com/buger/jsonparser",
    sum = "h1:2PnMjfWD7wBILjqQbt530v576A/cAbQvEW9gGIpYMUs=",
    version = "v1.1.1",
)

go_deps.module(
    path = "github.com/google/uuid",
    sum = "h1:NIvaJDMOsjHA8n1jAhLSgzrAzy1Hgr+hNrb57e+94F0=",
    version = "v1.6.0",
)

go_deps.module(
    path = "github.com/invopop/jsonschema",
    sum = "h1:KvpoAJWEjR3uD9Kbm2HWJmqsEaHt8lBUpd0qHcIi21E=",
    version = "v0.13.0",
)

go_deps.module(
    path = "github.com/mailru/easyjson",
    sum = "h1:UGYAvKxe3sBsEDzO8ZeWOSlIQfWFlxbzLZe7hwFURr0=",
    version = "v0.7.7",
)

go_deps.module(
    path = "github.com/spf13/cast",
    sum = "h1:cuNEagBQEHWN1FnbGEjCXL2szYEXqfJPbP2HNUaca9Y=",
    version = "v1.7.1",
)

go_deps.module(
    path = "github.com/wk8/go-ordered-map/v2",
    sum = "h1:5h/BUHu93oj4gIdvHHHGsScSTMijfx5PeYkE/fJgbpc=",
    version = "v2.1.8",
)

go_deps.module(
    path = "github.com/yosida95/uritemplate/v3",
    sum = "h1:Ed3Oyj9yrmi9087+NczuL5BwkIc4wvTb5zIM+UJPGz4=",
    version = "v3.0.2",
)

go_deps.module(
    path = "gopkg.in/yaml.v3",
    sum = "h1:fxVm/GzAzEWqLHuvctI91KS9hhNmmWOoWu0XTYJS7CA=",
    version = "v3.0.1",
)

use_repo(
    go_deps,
    "com_github_bahlo_generic_list_go",
    "com_github_buger_jsonparser",
    "com_github_google_uuid",
    "com_github_invopop_jsonschema",
    "com_github_mailru_easyjson",
    "com_github_mark3labs_mcp_go",
    "com_github_spf13_cast",
    "com_github_wk8_go_ordered_map_v2",
    "com_github_yosida95_uritemplate_v3",
    "in_gopkg_yaml_v3",
)
