load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "client",
    srcs = ["client.go"],
    importpath = "github.com/clappingmonkey/zuul-mcp/internal/client",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "//internal/models",
    ],
)

go_test(
    name = "client_test",
    srcs = ["client_test.go"],
    embed = [":client"],
    deps = ["//internal/config"],
)
