load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = [
        "server.go",
        "tools.go",
    ],
    importpath = "github.com/clappingmonkey/zuul-mcp/internal/server",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/client",
        "//internal/config",
        "//internal/models",
        "@com_github_mark3labs_mcp_go//mcp",
        "@com_github_mark3labs_mcp_go//server",
    ],
)
